@@ -24,6 +24,7 @@ typedef struct _TnyCamelPopStoreAccountPriv TnyCamelPopStoreAccountPriv;
 
 struct _TnyCamelPopStoreAccountPriv
 {
+	TnyFolder *inbox;
 	GMutex *lock;
 };
 
